# animatedNURBS

./: .gitignore  CMakeLists.txt  README.md  bezierinterpolator.c  bezierinterpolator.h  main.c  main.glade
